<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookingTruck</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Email_ID">Email_ID</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="Bookhere">Bookhere</string>
    <string name="Register">Register</string>
    <string name="PickupAddress">Pickup Address</string>
    <string name="DropAddress">Drop Address</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Getfare">getfare</string>
    
</resources>
